correction ie11

--- a/style.css
+++ b/style.css
@@ -921,6 +921,7 @@ SECTION 4  Collection, text only, card  DEBUT
     flex-direction: row;
     padding: 94px 117px 72px 123px;
     max-width: 1440px;
+    width: 100%;
     margin: auto;
 }
 
@@ -928,6 +929,7 @@ SECTION 4  Collection, text only, card  DEBUT
     display: flex;
     flex-direction: row;
     margin: 0px 48px 0px 0px;
+    width: 100%;
 }
 .section7_cards p,
 .section7_cards h3 {
@@ -1001,6 +1003,7 @@ SECTION 4  Collection, text only, card  DEBUT
     flex-direction: column;
     justify-content: center;
     margin: 0;
+    width: 100%;
 }
 .section7_text h2 {
     font-size: 32px;
